--- a/mkdocs-project/mkdocs.yml
+++ b/mkdocs-project/mkdocs.yml
@@ -9,8 +9,8 @@ pages:
 - Frameworks: frameworks.md
 - Caching: caching.md
 - CORS: cors.md
-#- Authentication: authentication.md
-#- Cloud Platforms: cloud-platforms.md
+- Authentication: authentication.md
+- Cloud Platforms: cloud-platforms.md
 - Resources: resources.md
 - Release Notes: release-notes.md
 # ------- configuration properties ---------------
