--- a/mkdocs-project/mkdocs.yml
+++ b/mkdocs-project/mkdocs.yml
@@ -3,7 +3,7 @@
 # Reference: http://www.mkdocs.org/user-guide/configuration/
 #
 site_name: Learn / Web Development
-pages:
+nav:
 - Home: index.md
 - Overview: overview.md
 - Development Tools: dev-tools.md
@@ -14,23 +14,28 @@ pages:
 - Cloud Platforms: cloud-platforms.md
 - Resources: resources.md
 # ------- configuration properties ---------------
-# Use Material theme
-# - installation notes:  https://github.com/squidfunk/mkdocs-material
-theme: material
-# Default "readthedocs" theme distributed with MkDocs
-#theme: readthedocs
-# See installation instructions for bootstrap theme:  http://mkdocs.github.io/mkdocs-bootstrap/
-# - bootstrap has no search feature
-#theme: bootstrap
-# See installation instructions for bootswatch theme:  http://mkdocs.github.io/mkdocs-bootswatch/
-#theme: cosmo
+# Alphabetize
+# ------------------------------------------------
+copyright:  Copyright Open Water Foundation
+# Use extra CSS to customize styles, based on theme
+extra_css:
+  - 'css/extra-material-theme.css'
+# ------------------------------------------------
+# Google Analytics:
+# - see:  https://squidfunk.github.io/mkdocs-material/getting-started/#google-analytics
+extra:
+  analytics:
+    provider: google
+    property: 'G-KJFMBY739T'
+# ------------------------------------------------
 # Don't indicate the repo because Edit will be shown on every page (don't want that in deployed mode)
 # - Also see edit_uri if repo_url is specified
 #repo_url:  https://github.com/OpenWaterFoundation/owf-learn-mkdocs
-site_description:  Open Water Foundation Learn Web Development
 site_author:  Open Water Foundation
-site_favicon:  'images/OWF-Logo-Favicon-32x32.png'
-copyright:  Copyright Open Water Foundation
- # Use extra CSS to customize styles, based on theme
-extra_css:
-  - 'css/extra-material-theme.css'
+site_description:  Open Water Foundation Learn Web Development
+# ------------------------------------------------
+# Use Material theme:
+# - installation notes:  https://github.com/squidfunk/mkdocs-material
+theme:
+  name: 'material'
+  favicon: 'images/OWF-Logo-Favicon-32x32.png'
